--- a/Episode6-Exploring the World/Coding/style.css
+++ b/Episode6-Exploring the World/Coding/style.css
@@ -48,6 +48,34 @@
     flex-wrap: wrap;
     gap: 2px;
 }
+.shimmer-container{
+    display: flex;
+    justify-items: start;
+    flex-wrap: wrap;
+    gap: 2px;
+}
+.shimmer-card{
+    display: flex;
+    flex-direction: column;
+    padding: 5px 5px 5px 5px;
+    width: 300px;
+    gap: 2px;
+}
+.shimmer-card div{
+    background: rgb(230, 230, 230);
+    width: 100%;
+    height: 300px;
+}
+.shimmer-card h3{
+    background: rgb(230, 230, 230);
+    width: 100%;
+    height: 10%;
+}
+.shimmer-card h4{
+    background: rgb(230, 230, 230);
+    width: 100%;
+    height: 10%;
+}
 @media screen and (max-width: 601px) {
     .res-container{
         justify-content: center;
