--- a/Episode6-Exploring the World/Coding/style.css
+++ b/Episode6-Exploring the World/Coding/style.css
@@ -76,6 +76,10 @@
     width: 100%;
     height: 10%;
 }
+.login{
+    padding: 2px 10px 2px 10px;
+    cursor: pointer;
+}
 @media screen and (max-width: 601px) {
     .res-container{
         justify-content: center;
