--- a/Episode6-Exploring the World/Coding/style.css
+++ b/Episode6-Exploring the World/Coding/style.css
@@ -80,6 +80,10 @@
     padding: 2px 10px 2px 10px;
     cursor: pointer;
 }
+.filter{
+    display: flex;
+    justify-content: space-between;
+}
 @media screen and (max-width: 601px) {
     .res-container{
         justify-content: center;
